Fixed spacing for mobile users.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,10 +28,6 @@ main {
     font-family: "Indie Flower", serif;
 }
 
-#main-socials {
-    font-family: "Exo ", serif;
-}
-
 footer  {
     font-family: "Exo", serif;
     color: #B1A7A6;
